--- a/WebDevTest/OrbusDevTest/Views/Product/Index.cshtml
+++ b/WebDevTest/OrbusDevTest/Views/Product/Index.cshtml
@@ -21,23 +21,11 @@
 <div style="clear: both"></div>
 <hr>
 <table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductKey)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StockLevel)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody id="producttablebody">
-        @* TODO: List of products *@
-    </tbody>
+    @foreach (var product in @Model)
+    {
+        @Html.Partial("Partial/ProductDetails", product)
+    }
+   
 </table>
 
 @section Scripts {
