--- a/WebDevTest/OrbusDevTest/Views/Product/Edit.cshtml
+++ b/WebDevTest/OrbusDevTest/Views/Product/Edit.cshtml
@@ -1,60 +1,48 @@
 ﻿@model OrbusDevTest.DataAccess.Models.Product
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
     
-        <fieldset>
-            <legend>Product</legend>
+    <fieldset>
+        <legend>Product</legend>
     
-            <div class="editor-label">
-                @Html.LabelFor(model => model.ProductKey)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.ProductKey)
-                @Html.ValidationMessageFor(model => model.ProductKey)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.ProductKey)
+        </div>
+        <div class="editor-field" id="productKey">
+            @Html.TextBoxFor(m => m.ProductKey, new { @readonly = "readonly" })
+            @Html.ValidationMessageFor(model => model.ProductKey)
+        </div>
     
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Name)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Name)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Name)
+            @Html.ValidationMessageFor(model => model.Name)
+        </div>
     
-            <div class="editor-label">
-                @Html.LabelFor(model => model.StockLevel)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.StockLevel)
-                @Html.ValidationMessageFor(model => model.StockLevel)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.StockLevel)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.StockLevel)
+            @Html.ValidationMessageFor(model => model.StockLevel)
+        </div>
     
-            <p>
-                <input type="submit" value="Save" />
-            </p>
-        </fieldset>
-    }
+        <p>
+            <input type="submit" value="Save" />
+        </p>
+    </fieldset>
+}
     
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-</body>
-</html>
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
