--- a/WebDevTest/OrbusDevTest/Views/Product/Details.cshtml
+++ b/WebDevTest/OrbusDevTest/Views/Product/Details.cshtml
@@ -1,44 +1,37 @@
 ﻿@model OrbusDevTest.DataAccess.Models.Product
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <fieldset>
-        <legend>Product</legend>
+
+
+<fieldset>
+    <legend>Product</legend>
     
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.ProductKey)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.ProductKey)
-        </div>
+    <div class="display-label">
+            @Html.DisplayNameFor(model => model.ProductKey)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.ProductKey)
+    </div>
     
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.Name)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.Name)
-        </div>
+    <div class="display-label">
+            @Html.DisplayNameFor(model => model.Name)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Name)
+    </div>
     
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.StockLevel)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.StockLevel)
-        </div>
-    </fieldset>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+    <div class="display-label">
+            @Html.DisplayNameFor(model => model.StockLevel)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.StockLevel)
+    </div>
+</fieldset>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id=Model.ProductKey }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
