--- a/WebDevTest/OrbusDevTest.Angular/Product.cshtml
+++ b/WebDevTest/OrbusDevTest.Angular/Product.cshtml
@@ -19,16 +19,8 @@
 <div style="clear: both"></div>
 <hr>
 <table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>ProductKey</th>
-            <th>Name</th>
-            <th>StockLevel</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody id="producttablebody">
-        @* TODO: List of products *@
-    </tbody>
+    @foreach (var product in @Model)
+    {
+        @Html.Partial("Partial/ProductDetails", product)
+    }
 </table>
-
