--- a/WebDevTest/OrbusDevTest/Views/Product/Index.cshtml
+++ b/WebDevTest/OrbusDevTest/Views/Product/Index.cshtml
@@ -21,13 +21,27 @@
 <div style="clear: both"></div>
 <hr>
 <table class="table table-striped table-hover">
-    @foreach (var product in @Model)
-    {
-        @Html.Partial("Partial/ProductDetails", product)
-    }
-   
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductKey)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StockLevel)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody id="producttablebody">
+        @foreach (var product in @Model)
+        {
+            @Html.Partial("Partial/ProductDetails", product)
+        }
+    </tbody>
 </table>
-
 @section Scripts {
     <script type="text/javascript">
         $(document).ready(function () {
@@ -66,6 +80,26 @@
                 });
             });
 
+            $("#subcategory").change(function () {
+                var subCategoryId = $("#subcategory").val();
+                $.ajax({
+                    url: apiurl + "http://localhost:37386/Product/GetProductListBySubCategory/?subCategoryId=" + subCategoryId,
+                    type: 'GET',
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data) {
+                        var appenddata1 = "";
+                        for (var i = 0; i < data.length; i++) {
+                            appenddata1 += "<option value = '" + data[i].Name + " '>" + data[i].Id + " </option>";
+                        }
+                        $("#subcategory").append(appenddata1);
+                    }
+                });
+            });
+
+            $("#minstock").change(function () {
+               
+            });
            
         });
     </script>
