--- a/WebDevTest/OrbusDevTest/Views/Shared/_Layout.cshtml
+++ b/WebDevTest/OrbusDevTest/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     @Styles.Render("~/Content/css")
     @* @Scripts.Render("~/bundles/modernizr")*@
 </head>
-<body>
+<body class="body">
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
